# LocalTimeTracker

./: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  entry.ts  index.html  scripts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: jira.rs  lib.rs  main.rs
src-tauri/tests/: timesheet.csv
